feat(candlestick): add validation for market data in candle analysis

--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -2473,7 +2473,7 @@
                     <button class="btn btn-primary" onclick="triggerManualScan()">
                         Jetzt scannen
                     </button>
-                    <button class="btn btn-warning" onclick="clearHistory()">
+                    <button class="btn btn-warning" onclick="clearHistory()" title="Löscht alle erkannten Patterns aus der History-Liste. Feedback und Korrekturen bleiben erhalten.">
                         History löschen
                     </button>
                 </div>
