feat(candlestick): refine pattern detection logic for Hanging Man and Shooting Star to require clear uptrend

--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -4561,12 +4561,16 @@
 
             // === Reversal Bearish ===
             'hanging_man': [
-                { open: 98, high: 102, low: 97, close: 101 },    // Vorherige grüne Kerze (Aufwärtstrend)
-                { open: 102, high: 103, low: 95, close: 102 }    // Hanging Man: kleiner Body oben, langer unterer Docht
+                { open: 96, high: 99, low: 95, close: 98 },      // 1. grüne Kerze (Aufwärtstrend)
+                { open: 98, high: 101, low: 97, close: 100 },    // 2. grüne Kerze (Aufwärtstrend)
+                { open: 100, high: 103, low: 99, close: 102 },   // 3. grüne Kerze (Aufwärtstrend)
+                { open: 103, high: 104, low: 95, close: 102 }    // Hanging Man: kleiner roter Body oben, langer unterer Docht
             ],
             'shooting_star': [
-                { open: 98, high: 102, low: 97, close: 101 },    // Vorherige grüne Kerze
-                { open: 102, high: 109, low: 101, close: 103 }   // Shooting Star: langer oberer Docht
+                { open: 96, high: 99, low: 95, close: 98 },      // 1. grüne Kerze (Aufwärtstrend)
+                { open: 98, high: 101, low: 97, close: 100 },    // 2. grüne Kerze (Aufwärtstrend)
+                { open: 100, high: 103, low: 99, close: 102 },   // 3. grüne Kerze (Aufwärtstrend)
+                { open: 103, high: 111, low: 102, close: 104 }   // Shooting Star: kleiner Body unten, langer oberer Docht
             ],
             'bearish_engulfing': [
                 { open: 100, high: 104, low: 99, close: 103 },   // Kleine grüne Kerze
