--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -7823,7 +7823,14 @@
 
                 let html = '<div style="display: flex; flex-direction: column; gap: 0.5rem;">';
                 for (const entry of history) {
-                    const timestamp = new Date(entry.timestamp).toLocaleString('de-DE');
+                    const timestamp = new Date(entry.timestamp).toLocaleString('de-DE', {
+                        day: '2-digit',
+                        month: '2-digit',
+                        year: 'numeric',
+                        hour: '2-digit',
+                        minute: '2-digit',
+                        second: '2-digit'
+                    });
                     html += `
                         <div style="background: rgba(255,255,255,0.03); padding: 0.5rem 0.8rem; border-radius: 4px; font-size: 0.85rem;">
                             <div style="display: flex; justify-content: space-between; align-items: center;">
