feat(candlestick): implement factory reset functionality for in-memory data across services
- Added clear_memory methods to PatternHistoryService, AutoOptimizationService, and ClaudeValidatorService to handle in-memory data clearing.
- Updated RuleConfigService to invoke these methods during factory reset, ensuring all relevant data is cleared.
- Enhanced frontend feedback to indicate which files and in-memory data were deleted or cleared during the factory reset process.

--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -8822,11 +8822,16 @@
 
                 // Show result
                 let message = 'Factory Reset abgeschlossen.\n\n';
-                message += 'Candlestick Service:\n';
+                message += '📁 Dateien gelöscht:\n';
                 message += result.deleted.map(f => `• ${f}`).join('\n');
 
+                if (result.memory_cleared && result.memory_cleared.length > 0) {
+                    message += '\n\n🧹 In-Memory Daten gelöscht:\n';
+                    message += result.memory_cleared.map(m => `• ${m}`).join('\n');
+                }
+
                 if (trainResult) {
-                    message += '\n\nTraining Service:\n';
+                    message += '\n\n📊 Training Service:\n';
                     message += trainResult.deleted.map(f => `• ${f}`).join('\n');
                 }
 
